[tool.poetry]
name = "hktkzyx-toolbox"
version = "0.5.1"
description = "Toolbox of hktkzyx."
authors = ["hktkzyx <hktkzyx@yeah.net>"]
license = "MulanPSL-2.0"
keywords = ["toolbox", "click"]
classifiers = [
    "License :: OSI Approved",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21"
scipy = "^1.7.1"
flake8-docstrings = { version = "^1.6.0", optional = true }
flake8 = { version = "^4.0.1", optional = true }
yapf = { version = "^0.32.0", optional = true }
pre-commit = { version = "^2.17.0", optional = true }
isort = { version = "^5.10.1", optional = true }
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
dev-tools = ["flake8", "flake8-docstrings", "yapf", "pre-commit", "isort"]

[tool.poetry.scripts]
hktkzyx-finance = 'hktkzyx_toolbox.scripts.finance:hktkzyx_finance'

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.1"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
split_before_arithmetic_operator = true
split_before_named_assigns = false
indent_dictionary_value = true
split_all_top_level_comma_separated_values = true

[tool.isort]
profile = "google"
