[tool.poetry]
authors = ["Brooks YUAN <hktkzyx@yeah.net>"]
classifiers = [
  "License :: OSI Approved",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English",
  "Programming Language :: Python",
]
description = "Toolbox of hktkzyx."
documentation = "https://hktkzyx.github.io/hktkzyx-toolbox/"
homepage = "https://hktkzyx.github.io/hktkzyx-toolbox/"
keywords = ["toolbox", "click"]
license = "MulanPSL-2.0"
name = "hktkzyx-toolbox"
readme = "docs/README.md"
repository = "https://github.com/hktkzyx/hktkzyx-toolbox"
version = "1.0.0"

[tool.poetry.dependencies]
click = "^8.0.4"
mike = {version = "^1.1.2", optional = true}
mkdocs = {version = "^1.3.0", optional = true}
mkdocs-material = {version = "^8.2.8", optional = true}
mkdocstrings-python-legacy = {version = "^0.2.2", optional = true}
numpy = "^1.22.3"
pytest = {version = "^7.1.1", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
python = ">=3.8,<3.10"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
yapf = "^0.32.0"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings-python-legancy", "mike"]
test = ["pytest", "pytest-cov"]

[tool.poetry.scripts]
hktkzyx-electronics = 'hktkzyx_toolbox.scripts.electronics:hktkzyx_electronics'
hktkzyx-finance = 'hktkzyx_toolbox.scripts.finance:hktkzyx_finance'

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "hktkzyx_toolbox"]

[tool.coverage.run]
source_pkgs = ["hktkzyx_toolbox"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "1.0.0"
version_files = ["pyproject.toml:version"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.yapf]
based_on_style = "pep8"
indent_dictionary_value = true
split_all_top_level_comma_separated_values = true
split_before_arithmetic_operator = true
split_before_named_assigns = false

[tool.isort]
profile = "google"
